tests/error/protocol_errors/not_declaration.err
Error: Unexpected function body (at $FILE:7:4)
  | 
5 | 
6 |     @guppy
7 |     def foo(self: "MyProto", x: float) -> str:
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |         return str(x)
  | ^^^^^^^^^^^^^^^^^^^^^ Unexpected function body in protocol definition

Help: Add a `@guppy.declare` annotation and leave the body empty to turn this
into a declaration

Guppy compilation failed due to 1 previous error
